--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "learn-starter",
+  "name": "simple-nextjs-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "date-fns": "^2.16.1",
